--- a/index.html
+++ b/index.html
@@ -14,7 +14,21 @@
     />
   </head>
   <body>
-    <h1>My portfolio <i class="fa-brands fa-github"></i></h1>
+    <header>
+      <div class="header-left">
+        <a href="/">SS.</a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Resume</a></li>
+          <li><a href="#">Contact</a></li>
+          <li>
+            <button><i class="fa-solid fa-sun"></i></button>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <script src="script.js"></script>
   </body>
 </html>
