completed hero section

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     />
   </head>
   <body>
+    <!-- header -->
     <header>
       <div class="header-left">
-        <a href="/">SS.</a>
+        <a href="/"><i class="fa-brands fa-staylinked"></i></a>
       </div>
       <nav>
         <ul>
@@ -29,6 +30,47 @@
         </ul>
       </nav>
     </header>
+
+    <!-- main -->
+    <main>
+      <p class="hey-para">Hey, I'm</p>
+      <p class="name-para">Salman Shaikh</p>
+      <p class="about-para">
+        I'm a software engineer based in Toronto, Canada and also a
+        communication and journalism student. I enjoy creating things that live
+        on the internet, whether that be websites, applications, or anything in
+        between. I have been freelancing for a year now while studying at the
+        university and I've manage to gain a decent amount of experience and
+        valuable knowledge from all different kinds of fields throughout my
+        projects/work.
+      </p>
+
+      <div class="main-btns">
+        <div class="main-btns-left">
+          <ul>
+            <li>
+              <a href="/">
+                <span><i class="fa-solid fa-envelope"></i> Send an Email </span>
+              </a>
+            </li>
+            <li>
+              <a href="/">
+                <span><i class="fa-brands fa-linkedin-in"></i> Linkedin </span>
+              </a>
+            </li>
+            <li>
+              <a href="/">
+                <span> <i class="fa-brands fa-github"></i>Github </span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="main-btns-right">
+          <i class="fa-solid fa-arrow-down"></i>
+        </div>
+      </div>
+    </main>
+
     <script src="script.js"></script>
   </body>
 </html>
