completed hero sectin, also added dark-light theme

--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
       <nav>
         <ul>
           <li><a href="#">Projects</a></li>
-          <li><a href="#">Resume</a></li>
+          <li><a href="91 CSS Interview Question.pdf" download>Resume</a></li>
           <li><a href="#">Contact</a></li>
           <li>
-            <button><i class="fa-solid fa-sun"></i></button>
+            <button onclick="changeTheme()">
+              <i class="fa-solid fa-sun" id="sun"></i>
+              <i class="fa-solid fa-moon" id="moon"></i>
+            </button>
           </li>
         </ul>
       </nav>
@@ -49,7 +52,7 @@
         <div class="main-btns-left">
           <ul>
             <li>
-              <a href="/">
+              <a href="mailto:salmanksdfj@gmail.com">
                 <span><i class="fa-solid fa-envelope"></i> Send an Email </span>
               </a>
             </li>
