added project section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,114 @@
       </div>
     </main>
 
+    <!-- projects section -->
+    <section class="projects-section">
+      <h2>Featured Projects</h2>
+      <div class="projects-wrapper">
+        <div class="project">
+          <img
+            src="https://sample-videos.com/img/Sample-png-image-500kb.png"
+            alt=""
+          />
+          <p class="project-title">IntenseProxy</p>
+          <p>
+            Proxy provider website including authentication, dashboard and
+            dynamic features
+          </p>
+          <div>
+            <a href="#">React</a>
+            <a href="#">Tailwind css</a>
+          </div>
+          <a href="/">Live Demo</a>
+        </div>
+
+        <div class="project">
+          <img
+            src="https://sample-videos.com/img/Sample-png-image-500kb.png"
+            alt=""
+          />
+          <p class="project-title">IntenseProxy</p>
+          <p>
+            Proxy provider website including authentication, dashboard and
+            dynamic features
+          </p>
+          <div>
+            <a href="#">React</a>
+            <a href="#">Tailwind css</a>
+          </div>
+          <a href="/">Live Demo</a>
+        </div>
+
+        <div class="project">
+          <img
+            src="https://sample-videos.com/img/Sample-png-image-500kb.png"
+            alt=""
+          />
+          <p class="project-title">IntenseProxy</p>
+          <p>
+            Proxy provider website including authentication, dashboard and
+            dynamic features
+          </p>
+          <div>
+            <a href="#">React</a>
+            <a href="#">Tailwind css</a>
+          </div>
+          <a href="/">Live Demo</a>
+        </div>
+
+        <div class="project">
+          <img
+            src="https://sample-videos.com/img/Sample-png-image-500kb.png"
+            alt=""
+          />
+          <p class="project-title">IntenseProxy</p>
+          <p>
+            Proxy provider website including authentication, dashboard and
+            dynamic features
+          </p>
+          <div>
+            <a href="#">React</a>
+            <a href="#">Tailwind css</a>
+          </div>
+          <a href="/">Live Demo</a>
+        </div>
+
+        <div class="project">
+          <img
+            src="https://sample-videos.com/img/Sample-png-image-500kb.png"
+            alt=""
+          />
+          <p class="project-title">IntenseProxy</p>
+          <p>
+            Proxy provider website including authentication, dashboard and
+            dynamic features
+          </p>
+          <div>
+            <a href="#">React</a>
+            <a href="#">Tailwind css</a>
+          </div>
+          <a href="/">Live Demo</a>
+        </div>
+
+        <div class="project">
+          <img
+            src="https://sample-videos.com/img/Sample-png-image-500kb.png"
+            alt=""
+          />
+          <p class="project-title">IntenseProxy</p>
+          <p>
+            Proxy provider website including authentication, dashboard and
+            dynamic features
+          </p>
+          <div>
+            <a href="#">React</a>
+            <a href="#">Tailwind css</a>
+          </div>
+          <a href="/">Live Demo</a>
+        </div>
+      </div>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
